--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "livingwayethiopia-frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "clear && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "globby": "^12.0.2",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
+    "react-stickynode": "^4.0.0",
+    "react-waypoint": "^10.1.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/prettier": "^2.4.2",
+    "@types/react-stickynode": "^4.0.0",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "typescript": "^4.5.2"
   }
 }
