--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
     "globby": "^12.0.2",
     "next": "12.0.4",
     "react": "17.0.2",
