--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.7.0",
     "globby": "^12.0.2",
+    "keen-slider": "^6.3.4",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
