--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ga": "^3.3.0",
     "react-stickynode": "^4.0.0",
     "react-waypoint": "^10.1.0",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
