--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "@react-google-maps/api": "^2.7.0",
     "globby": "^12.0.2",
     "keen-slider": "^6.3.4",
@@ -24,8 +25,11 @@
     "@types/prettier": "^2.4.2",
     "@types/react-stickynode": "^4.0.0",
     "@types/styled-components": "^5.1.15",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7",
     "typescript": "^4.5.2"
   }
 }
