--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.4.2",
+        "antd": "^4.18.2",
         "globby": "^12.0.2",
         "keen-slider": "^6.3.4",
         "next": "12.0.7",
