--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.4.2",
-        "antd": "^4.18.2",
+        "dayjs": "^1.10.7",
         "globby": "^12.0.2",
         "keen-slider": "^6.3.4",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-ga": "^3.3.0",
+        "react-markdown": "^7.1.2",
         "react-stickynode": "^4.0.0",
         "react-waypoint": "^10.1.0",
         "sharp": "^0.29.3",
