(feat) cleanup on null case

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_ANALYTICS_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_STRAPI_GRAPHQL_ENDPOINT=https://cms.livingwayethiopia.com/graphql
 NEXT_PUBLIC_MAILCHIMP=
+NEXT_PUBLIC_LANGUAGE=
