--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.4.2",
+        "axios": "^0.24.0",
         "dayjs": "^1.10.7",
         "globby": "^12.0.2",
         "graphql": "^16.2.0",
@@ -24,7 +25,8 @@
         "react-waypoint": "^10.1.0",
         "remark-gfm": "^3.0.1",
         "sharp": "^0.29.3",
-        "styled-components": "^5.3.3"
+        "styled-components": "^5.3.3",
+        "swr": "^1.1.2"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^2.3.1",
