(feat) setarted with the podcast integration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@headlessui/react": "^1.4.2",
         "axios": "^0.24.0",
         "dayjs": "^1.10.7",
+        "fast-xml-parser": "^4.0.1",
         "globby": "^12.0.2",
         "graphql": "^16.2.0",
         "graphql-request": "^3.7.0",
@@ -20,6 +21,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-ga": "^3.3.0",
+        "react-html-parser": "^2.0.2",
         "react-markdown": "^7.1.2",
         "react-stickynode": "^4.0.0",
         "react-waypoint": "^10.1.0",
@@ -32,6 +34,7 @@
         "@graphql-codegen/cli": "^2.3.1",
         "@graphql-codegen/typescript": "^2.4.2",
         "@types/prettier": "^2.4.2",
+        "@types/react-html-parser": "^2.0.2",
         "@types/react-stickynode": "^4.0.0",
         "@types/styled-components": "^5.1.15",
         "autoprefixer": "^10.4.0",
