--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@headlessui/react": "^1.4.2",
         "axios": "^0.24.0",
         "dayjs": "^1.10.7",
-        "fast-xml-parser": "^4.0.1",
         "globby": "^12.0.2",
         "graphql": "^16.2.0",
         "graphql-request": "^3.7.0",
@@ -26,6 +25,7 @@
         "react-stickynode": "^4.0.0",
         "react-waypoint": "^10.1.0",
         "remark-gfm": "^3.0.1",
+        "rss-parser": "^3.12.0",
         "sharp": "^0.29.3",
         "styled-components": "^5.3.3",
         "swr": "^1.1.2"
