--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "globby": "^12.0.2",
         "graphql": "^16.2.0",
         "graphql-request": "^3.7.0",
+        "html-entities": "^2.3.2",
         "keen-slider": "^6.3.4",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-ga": "^3.3.0",
         "react-html-parser": "^2.0.2",
+        "react-mailchimp-subscribe": "^2.1.3",
         "react-markdown": "^7.1.2",
         "react-stickynode": "^4.0.0",
         "react-waypoint": "^10.1.0",
@@ -35,6 +37,7 @@
         "@graphql-codegen/typescript": "^2.4.2",
         "@types/prettier": "^2.4.2",
         "@types/react-html-parser": "^2.0.2",
+        "@types/react-mailchimp-subscribe": "^2.1.1",
         "@types/react-stickynode": "^4.0.0",
         "@types/styled-components": "^5.1.15",
         "autoprefixer": "^10.4.0",
