--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^1.4.2",
+        "@popperjs/core": "^2.11.2",
         "axios": "^0.24.0",
         "dayjs": "^1.10.7",
         "globby": "^12.0.2",
